--- a/www/fenxi/pri_are_low.html
+++ b/www/fenxi/pri_are_low.html
@@ -29,16 +29,16 @@
 </script>
 </head>
 <body>
-    <div id="fa65134f4e5b49068b2d08d1858912b8" style="width:100%;height:400px;"></div>
+    <div id="f090852f403241428726b877c8e43d74" style="width:100%;height:400px;"></div>
     <script type="text/javascript">
 
-var myChart_fa65134f4e5b49068b2d08d1858912b8 = echarts.init(document.getElementById('fa65134f4e5b49068b2d08d1858912b8'), 'light', {renderer: 'canvas'});
+var myChart_f090852f403241428726b877c8e43d74 = echarts.init(document.getElementById('f090852f403241428726b877c8e43d74'), 'light', {renderer: 'canvas'});
 
-var option_fa65134f4e5b49068b2d08d1858912b8 = {
+var option_f090852f403241428726b877c8e43d74 = {
     "title": [
         {
-            "text": "\u4ef7\u683c\u524d500\u6240\u5360\u6bd4\u91cd\u524d\u5341(\u5de6)\u540e\u5341(\u53f3)\u57ce\u5e02",
-            "left": "center",
+            "text": "\u9762\u79ef\u4ef7\u683c\u6bd4\u6392\u540d\u524d\u5341\u57ce\u5e02",
+            "left": "auto",
             "top": "auto",
             "textStyle": {
                 "fontSize": 18
@@ -68,7 +68,7 @@ var option_fa65134f4e5b49068b2d08d1858912b8 = {
             }
         }
     },
-    "series_id": 2830748,
+    "series_id": 2148462,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -84,177 +84,52 @@ var option_fa65134f4e5b49068b2d08d1858912b8 = {
     },
     "series": [
         {
-            "type": "pie",
-            "name": "\u4ef7\u683c\u524d500\u6240\u5360\u6bd4\u91cd\u524d\u5341\u57ce\u5e02",
+            "type": "bar",
+            "name": "\u57ce\u5e02",
             "data": [
-                {
-                    "name": "\u4e0a\u6d77",
-                    "value": 175.0
-                },
-                {
-                    "name": "\u6df1\u5733",
-                    "value": 101.0
-                },
-                {
-                    "name": "\u4e09\u4e9a",
-                    "value": 30.0
-                },
-                {
-                    "name": "\u676d\u5dde",
-                    "value": 26.0
-                },
-                {
-                    "name": "\u5e7f\u5dde",
-                    "value": 21.0
-                },
-                {
-                    "name": "\u6210\u90fd",
-                    "value": 16.0
-                },
-                {
-                    "name": "\u9752\u5c9b",
-                    "value": 13.0
-                },
-                {
-                    "name": "\u53a6\u95e8",
-                    "value": 12.0
-                },
-                {
-                    "name": "\u91cd\u5e86",
-                    "value": 11.0
-                },
-                {
-                    "name": "\u8d35\u9633",
-                    "value": 9.0
-                }
+                95.80097970503158,
+                89.62773346049764,
+                83.3366137721916,
+                65.83430932731572,
+                57.610074369785615,
+                55.87984862910691,
+                54.1364533239417,
+                51.64505030741847,
+                48.08273225292171,
+                45.708439132175876
             ],
-            "radius": [
-                "30%",
-                "75%"
-            ],
-            "center": [
-                "25%",
-                "50%"
-            ],
-            "roseType": "radius",
+            "barCategoryGap": "50%",
             "label": {
                 "normal": {
-                    "show": true,
-                    "position": "outside",
+                    "show": false,
+                    "position": "top",
                     "textStyle": {
                         "fontSize": 12
-                    },
-                    "formatter": "{b}: {d}%"
+                    }
                 },
                 "emphasis": {
                     "show": true,
                     "textStyle": {
                         "fontSize": 12
-                    },
-                    "formatter": "{b}: {d}%"
+                    }
                 }
             },
-            "seriesId": 2830748
-        },
-        {
-            "type": "pie",
-            "name": "\u4ef7\u683c\u540e500\u6240\u5360\u6bd4\u91cd\u524d\u5341\u57ce\u5e02",
-            "data": [
-                {
-                    "name": "\u4e5d\u6c5f",
-                    "value": 21.0
-                },
-                {
-                    "name": "\u6210\u90fd",
-                    "value": 14.0
-                },
-                {
-                    "name": "\u6f4d\u574a",
-                    "value": 13.0
-                },
-                {
-                    "name": "\u978d\u5c71",
-                    "value": 13.0
-                },
-                {
-                    "name": "\u901a\u5316",
-                    "value": 13.0
-                },
-                {
-                    "name": "\u90d1\u5dde",
-                    "value": 8.0
-                },
-                {
-                    "name": "\u8d63\u5dde",
-                    "value": 8.0
-                },
-                {
-                    "name": "\u94f6\u5ddd",
-                    "value": 8.0
-                },
-                {
-                    "name": "\u6885\u5dde",
-                    "value": 8.0
-                },
-                {
-                    "name": "\u5fb7\u5dde",
-                    "value": 7.0
-                }
-            ],
-            "radius": [
-                "30%",
-                "75%"
-            ],
-            "center": [
-                "80%",
-                "50%"
-            ],
-            "roseType": "area",
-            "label": {
-                "normal": {
-                    "show": true,
-                    "position": "outside",
-                    "textStyle": {
-                        "fontSize": 12
-                    },
-                    "formatter": "{b}: {d}%"
-                },
-                "emphasis": {
-                    "show": true,
-                    "textStyle": {
-                        "fontSize": 12
-                    },
-                    "formatter": "{b}: {d}%"
-                }
+            "markPoint": {
+                "data": []
             },
-            "seriesId": 2830748
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 2148462
         }
     ],
     "legend": [
         {
             "data": [
-                "\u4e0a\u6d77",
-                "\u6df1\u5733",
-                "\u4e09\u4e9a",
-                "\u676d\u5dde",
-                "\u5e7f\u5dde",
-                "\u6210\u90fd",
-                "\u9752\u5c9b",
-                "\u53a6\u95e8",
-                "\u91cd\u5e86",
-                "\u8d35\u9633",
-                "\u4e5d\u6c5f",
-                "\u6f4d\u574a",
-                "\u978d\u5c71",
-                "\u901a\u5316",
-                "\u90d1\u5dde",
-                "\u8d63\u5dde",
-                "\u94f6\u5ddd",
-                "\u6885\u5dde",
-                "\u5fb7\u5dde"
+                "\u57ce\u5e02"
             ],
             "selectedMode": "multiple",
-            "show": false,
+            "show": true,
             "left": "center",
             "top": "top",
             "orient": "horizontal",
@@ -264,35 +139,112 @@ var option_fa65134f4e5b49068b2d08d1858912b8 = {
         }
     ],
     "animation": true,
+    "xAxis": [
+        {
+            "show": true,
+            "nameLocation": "middle",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisTick": {
+                "alignWithLabel": false
+            },
+            "inverse": false,
+            "boundaryGap": true,
+            "type": "category",
+            "splitLine": {
+                "show": false
+            },
+            "axisLine": {
+                "lineStyle": {
+                    "width": 1
+                }
+            },
+            "axisLabel": {
+                "interval": "auto",
+                "rotate": 0,
+                "margin": 8,
+                "textStyle": {
+                    "fontSize": 12
+                }
+            },
+            "data": [
+                "\u5317\u4eac",
+                "\u6df1\u5733",
+                "\u4e0a\u6d77",
+                "\u6fee\u9633",
+                "\u4e09\u4e9a",
+                "\u5e7f\u5dde",
+                "\u676d\u5dde",
+                "\u53a6\u95e8",
+                "\u54c8\u5c14\u6ee8",
+                "\u5357\u4eac"
+            ]
+        }
+    ],
+    "yAxis": [
+        {
+            "show": true,
+            "nameLocation": "middle",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisTick": {
+                "alignWithLabel": false
+            },
+            "inverse": false,
+            "boundaryGap": true,
+            "type": "value",
+            "splitLine": {
+                "show": true
+            },
+            "axisLine": {
+                "lineStyle": {
+                    "width": 1
+                }
+            },
+            "axisLabel": {
+                "interval": "auto",
+                "formatter": "{value} ",
+                "rotate": 0,
+                "margin": 8,
+                "textStyle": {
+                    "fontSize": 12
+                }
+            }
+        }
+    ],
     "color": [
-        "#918597",
-        "#2a5caa",
-        "#b2d235",
-        "#ac6767",
-        "#ca8622",
-        "#444693",
-        "#f6f5ec",
-        "#f05b72",
-        "#749f83",
-        "#6d8346",
         "#c23531",
-        "#905a3d",
-        "#c4ccd3",
         "#2f4554",
-        "#fab27b",
+        "#61a0a8",
+        "#d48265",
+        "#749f83",
+        "#ca8622",
+        "#bda29a",
         "#6e7074",
-        "#f47920",
-        "#726930",
+        "#546570",
+        "#c4ccd3",
+        "#f05b72",
         "#ef5b9c",
+        "#f47920",
+        "#905a3d",
+        "#fab27b",
+        "#2a5caa",
+        "#444693",
+        "#726930",
+        "#b2d235",
+        "#6d8346",
+        "#ac6767",
         "#1d953f",
         "#6950a1",
-        "#bda29a",
-        "#546570",
-        "#61a0a8",
-        "#d48265"
+        "#918597",
+        "#f6f5ec"
     ]
 };
-myChart_fa65134f4e5b49068b2d08d1858912b8.setOption(option_fa65134f4e5b49068b2d08d1858912b8);
+myChart_f090852f403241428726b877c8e43d74.setOption(option_f090852f403241428726b877c8e43d74);
 
 </script>
 </body>
