--- a/www/index.html
+++ b/www/index.html
@@ -119,7 +119,7 @@
                         '                        </li>\n' +
                         '\n' +
                         '                        <li>\n' +
-                        '                            <a href="#"><span>修改信息</span></a>\n' +
+                        '                            <a href="./change_info.html"><span>修改信息</span></a>\n' +
                         '                        </li>\n' +
                         '\n' +
                         '                        <li>\n' +
