--- a/www/search.html
+++ b/www/search.html
@@ -55,7 +55,6 @@
         .panel-body {
             height: 500px;
             overflow: auto;
-            text-align: center;
         }
 
         .info_close {
@@ -183,6 +182,7 @@
                 </div>
                 <h1>正在分析，请稍后......</h1>
             </div>
+
             <button class="btn btn-default btn-lg info_close" onclick="closefenxi()">关闭</button>
         </div>
 
@@ -355,7 +355,8 @@
 
         $('#fenxi_btn').click(function () {
             $('#fenxibox').css("display", "block")
-            $('.fenxi_body').html('                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"\n' +
+            $('.fenxi_body').html('<div class="progress">\n' +
+                '                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"\n' +
                 '                         aria-valuemin="0" aria-valuemax="100" style="width: 100%">\n' +
                 '                        <span class="sr-only">100% Complete</span>\n' +
                 '                    </div>\n' +
