--- a/www/index.html
+++ b/www/index.html
@@ -71,14 +71,14 @@
                 <h2>查找心仪的房子</h2>
                 <p>你可以在导航中转到搜索页面，根据指定的条件搜索房屋的信息。根据你选择的信息，网站将根据城市为你做出分析与参考。</p>
                 <p>
-                    <a class="btn btn-info btn-lg" href="/api/test/" role="button">点击此处当场去世 &raquo;&raquo;&raquo;</a>
+                    <a class="btn btn-info btn-lg" href="./search.html" role="button">GO &raquo;&raquo;&raquo;</a>
                 </p>
             </div>
             <div class="col-md-4">
                 <h2>在同城论坛交流</h2>
                 <p>你可以选择进入一个城市的论坛，与其他的用户交流探讨租房经验或寻求合租的租客。你也可以在这里与他人分享你此刻的心情。</p>
                 <p>
-                    <a class="btn btn-info btn-lg" href="{% url 'app:blog' %}" role="button">点击此处当场去世 &raquo;&raquo;&raquo;</a>
+                    <a class="btn btn-info btn-lg" href="./blog.html" role="button">GO &raquo;&raquo;&raquo;</a>
                 </p>
             </div>
             <div class="col-md-4">
