--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
                 <form class="navbar-form navbar-left" action="/api/login/" method="post">
                     <div class="form-group">
                         <input type="text" class="form-control" name="username" placeholder="用户名">
-                        <input type="text" class="form-control" name="password" placeholder="密码">
+                        <input type="password" class="form-control" name="password" placeholder="密码">
 
                     </div>
                     <button class="btn btn-info submit">登录</button>
